extra fix workflows part3: add find

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,12 @@ jobs:
           pip install -r requirements.txt
           mkdir -p scripts/lib
           cp $ANDROID_HOME/build-tools/36.0.0/lib/apksigner.jar scripts/lib
-          cp $ANDROID_HOME/build-tools/36.0.0/apksig* scripts/
+          find $ANDROID_HOME/build-tools/
+          if [ "$RUNNER_OS" = "Windows" ]; then
+            cp $ANDROID_HOME/build-tools/36.0.0/bin/apksigner.bat scripts/
+          else
+            cp $ANDROID_HOME/build-tools/36.0.0/apksigner scripts/
+          fi
           rustup default stable
           cargo install --git https://github.com/Veha0001/Hexsaly
           cp $HOME/.cargo/bin/hexsaly* scripts/hexsaly
