--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,10 +37,13 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
+      - name: Install the latest version of uv
+        uses: astral-sh/setup-uv@v6
+        with:
+          version: "latest"
       - name: Setup scripts
         run: |
-          pip install -r requirements.txt
+          uv sync --script main.py
           mkdir -p scripts/lib
           if [ $RUNNER_OS = "Windows" ]; then
             export ANDROID_HOME="${ANDROID_HOME//\\//}"
