Okay no need b64

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v5
       - name: Create Archive
-        run: |
-          base64 --decode config.bin > config.json
-          rm config.bin
-          zip -r ../JustAsPlanned.zip .
+        run: zip -r ../JustAsPlanned.zip .
       - name: Publish Release
         uses: softprops/action-gh-release@v2
         with:
@@ -42,7 +39,6 @@ jobs:
         uses: actions/checkout@v5
       - name: Setup scripts
         run: |
-          pip install -r requirements.txt
           mkdir -p scripts/lib
           if [ $RUNNER_OS = "Windows" ]; then
             export ANDROID_HOME="${ANDROID_HOME//\\//}"
@@ -54,9 +50,6 @@ jobs:
           cp $HOME/.cargo/bin/hexsaly* scripts/
       - name: Prepare Archive
         run: |
-          base64 --decode config.bin > config.json
-          rm config.bin
-
           if [ $RUNNER_OS = "Windows" ]; then
             7z a -tzip -r "MUSE_${RUNNER_OS}-${RUNNER_ARCH}_JAP.zip" .
           else
